--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="playerholder">
+        <h1>PLAYER 1</h1>
+        <div>
+            <input type="text" placeholder="NAME:"> 
+            <button class="namesubmit">submit</button>
+        </div>
+        <h3>WINS:<span></span></h3>
+    </div>
 
     <div class="board">
         <div class="square"></div>
@@ -17,6 +25,19 @@
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
+    </div>
+
+    <div class="playerholder">
+        <h1>PLAYER 2</h1>
+        <div>
+            <input type="text" placeholder="NAME:"> 
+            <button class="namesubmit">submit</button>
+        </div>
+        <h3>WINS:<span></span></h3>
+    </div>
+
+    <div class="outcome">
+        <h2></h2>
     </div>
     
 
