--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <input type="text" placeholder="NAME:"> 
             <button class="namesubmit">submit</button>
         </div>
-        <h3>WINS:<span></span></h3>
+        <h3>WINS: <span>0</span></h3>
     </div>
 
     <div class="board">
@@ -33,7 +33,7 @@
             <input type="text" placeholder="NAME:"> 
             <button class="namesubmit">submit</button>
         </div>
-        <h3>WINS:<span></span></h3>
+        <h3>WINS: <span>0</span></h3>
     </div>
 
     <div class="outcome">
